Change telegram handle

--- a/template/contacts.html
+++ b/template/contacts.html
@@ -8,8 +8,8 @@
 <section class="page-section">
 	<div class="inner-wrapper pure-g">
 		<h1>{{ contactstitle }}</h1>
-		{{ contactbtn('Reo_SP', 'skype:Reo_SP?add', 'img/icon/skype.png') }}
-		{{ contactbtn('Reo_SP', 'https://telegram.me/Reo_SP', 'img/icon/telegram.png') }}
+		{{ contactbtn('reo_sp', 'skype:reo_sp?add', 'img/icon/skype.png') }}
+		{{ contactbtn('reo7sp', 'https://telegram.me/reo7sp', 'img/icon/telegram.png') }}
 		{{ contactbtn('&#097;&#064;&#114;&#101;&#111;&#055;&#115;&#112;&#046;&#114;&#117;', '&#109;&#097;&#105;&#108;&#116;&#111;:&#097;&#064;&#114;&#101;&#111;&#055;&#115;&#112;&#046;&#114;&#117;', 'img/icon/mail.png') }}
 	</div>
 </section>
