--- a/app/styles/storm.sass
+++ b/app/styles/storm.sass
@@ -1,16 +1,31 @@
 .storm
-  position: absolute
-  z-index: -1
-
-  &_sm-screen
-    width: auto
-    height: 100%
-    top: 0
-    right: 0
+  @media print
+    display: none
 
   &_xs-screen
     width: 100%
     height: auto
-    bottom: 0
-    left: 0
+    display: none
 
+    @media (max-width: 34em)
+      display: block
+
+  &_sm-screen
+    width: 100%
+    height: auto
+    display: none
+
+    @media (min-width: 34em) and (max-width: 52em)
+      display: block
+
+  &_md-screen
+    position: absolute
+    z-index: -1
+    top: 0
+    right: 0
+    width: auto
+    height: 100%
+    display: none
+
+    @media (min-width: 52em)
+      display: block
