--- a/app/styles/container.sass
+++ b/app/styles/container.sass
@@ -2,9 +2,6 @@
   padding: 32px 32px
   flex: 1
 
-  @media (min-width: 34em) and (max-width: 52em)
-    padding: 32px 64px
-
-  @media (min-width: 52em)
+  @media (min-width: 640px)
     padding: 32px 96px
 
