--- a/app/styles/giraffe-background.sass
+++ b/app/styles/giraffe-background.sass
@@ -45,8 +45,8 @@
       top: 0
       left: 0
       z-index: -9
-      background-image: linear-gradient(to left, rgba(255,255,255, 0), rgba(255,255,255, 1) 90%)
-      width: 16em
+      background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1))
+      width: 300px
       height: 100%
       content: ""
 
