--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -19,5 +19,8 @@
     {% block body %}{% endblock %}
 
     {% block after_body %}{% endblock %}
+
+    <!-- Yandex.Metrika -->
+    <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter26801520 = new Ya.Metrika({ id:26801520, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/26801520" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   </body>
 </html>
