--- a/app/styles/giraffe-background.sass
+++ b/app/styles/giraffe-background.sass
@@ -1,13 +1,13 @@
 .giraffe-background
   &_giraffe
-    position: absolute
+    position: fixed
     bottom: 0
     right: 0
     z-index: -5
     height: 75%
 
   &_dialog
-    position: absolute
+    position: fixed
     top: 200px
     right: 220px
     z-index: -1
@@ -30,7 +30,7 @@
       z-index: -2
 
   &_back
-    position: absolute
+    position: fixed
     top: 0
     right: 0
     z-index: -10
