--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -127,7 +127,7 @@
       'Thylogale',
       ['web app', 'open source', 'ruby', 'rails'],
       ['webapp', 'oss', 'ruby', 'rails'],
-      'CMS for static sites',
+      'Content management system for static sites',
       'https://github.com/reo7sp/thylogale',
       'GitHub'
   ) }}
