--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -228,5 +228,5 @@
 
 <div class="work-github">
   <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
-  <a class="contacts-links__link" href="https://github.com/reo7sp">See full list of my open source projects on GitHub</a>
+  <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp">See full list of my open source projects on GitHub</a>
 </div>
