New cool telegram link

--- a/app/partials/_contacts.html
+++ b/app/partials/_contacts.html
@@ -5,7 +5,7 @@
   </li>
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/telegram.png" alt="Telegram">
-    <a class="contacts-links__link" target="_blank" href="https://telegram.me/reo7sp">Telegram</a>
+    <a class="contacts-links__link" target="_blank" href="https://t.me/reo7sp">Telegram</a>
   </li>
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/skype.png" alt="Skype">
