--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -9,6 +9,7 @@
     <script src="scripts/app.js" defer></script>
 
     <title>{% block title %}{% endblock %}</title>
+    <meta name="description" content="22 projects are featured on this portfolio site. See GitHub for more."> 
 
     {% block head %}{% endblock %}
   </head>
