--- a/app/partials/_contacts.html
+++ b/app/partials/_contacts.html
@@ -5,7 +5,7 @@
   </li>
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/linkedin.png" alt="LinkedIn">
-    <a class="contacts-links__link" target="_blank" href="https://linkedin.com/in/reo7sp">LinkedIn</a>
+    <a class="contacts-links__link" target="_blank" href="https://www.linkedin.com/in/reo7sp">LinkedIn</a>
   </li>
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/telegram.png" alt="Telegram">
@@ -15,7 +15,6 @@
     <img class="contacts-links__icon" src="images/icons/skype.png" alt="Skype">
     <a class="contacts-links__link" target="_blank" href="skype:reo_sp?add">Skype</a>
   </li>
-  
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/mail.png" alt="Email">
     <a class="contacts-links__link" target="_blank" href="&#109;&#097;&#105;&#108;&#116;&#111;:&#097;&#064;&#114;&#101;&#111;&#055;&#115;&#112;&#046;&#114;&#117;">&#097;&#064;&#114;&#101;&#111;&#055;&#115;&#112;&#046;&#114;&#117;</a>
