--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -9,9 +9,12 @@
     margin-left: 24px
     text-shadow: 0 0 10px white
 
-  &__link
-    margin-left: 24px
+  &__links
+    margin-left: 12px
     display: table
+
+  &__link
+    margin-left: 12px
     cursor: pointer
 
   &__info-labels
@@ -49,6 +52,12 @@
     &_neuro
       color: #673ab7
     &_compvis
+      color: #673ab7
+    &_datasci
+      color: #673ab7
+    &_nlp
+      color: #673ab7
+    &_lda
       color: #673ab7
     &_site
       color: #673ab7
