--- a/app/partials/_education.html
+++ b/app/partials/_education.html
@@ -2,14 +2,14 @@
 
 <ul>
   <li>
-    2016–2020: Bauman Moscow State Technical University
+    2016–2020: <strong>Bauman Moscow State Technical University</strong>
   </li>
 </ul>
 
 <h2>Additional courses</h2>
 <ul>
   <li>
-    <p>Введение в машинное обучение от университета Высшая школа экономики на Coursera</p>
-    <p><a href="https://www.coursera.org/account/accomplishments/verify/NANEYSFHTVTZ" target="_blank">Coursera Course Certificate</a></p>
+    <p><strong>Introduction to machine learning</strong> from the University Higher School of Economics on Coursera</p>
+    <p><a href="https://www.coursera.org/account/accomplishments/verify/NANEYSFHTVTZ" target="_blank">Coursera course certificate</a></p>
   </li>
 </ul>
