--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -32,7 +32,7 @@
       'Voice to vector',
       ['neural networks', 'open source', 'python', 'theano', 'lasagne'],
       ['neuro', 'oss', 'python', 'python', 'python'],
-      'Transforms voice to vector so you can compare them',
+      'Transforms voices to vectors so you can compare them',
       'https://github.com/xenx/speech',
       'GitHub',
       'http://www.slideshare.net/OlegMorozenkov/speechlock-voice-to-vector-voice-similarity',
@@ -43,7 +43,7 @@
       'Face3dMatch',
       ['computer vision', 'open source', 'android', 'scala'],
       ['compvis', 'oss', 'android', 'scala'],
-      'Android app which authorizes user using 3d model of his face',
+      'Android app which authorizes user using 3d model of the face',
       'https://github.com/reo7sp/Face3dMatch',
       'GitHub'
   ) }}
@@ -61,7 +61,7 @@
       'FourierTransformTest',
       ['open source', 'scala'],
       ['oss', 'scala'],
-      'Researching fourier transform of wave moving in time',
+      'Researching fourier transform of waves moving in time',
       'https://github.com/reo7sp/FourierTransformTest',
       'GitHub'
   ) }}
