--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -61,7 +61,7 @@
       'FourierTransformTest',
       ['open source', 'scala'],
       ['oss', 'scala'],
-      'Researching fourier transform of waves moving in time',
+      'Researching fourier transform of a wave moving in time',
       'https://github.com/reo7sp/FourierTransformTest',
       'GitHub'
   ) }}
