Better text shadow

--- a/app/partials/_education.html
+++ b/app/partials/_education.html
@@ -1,14 +1,14 @@
 <h2>Education</h2>
 
 <ul>
-  <li>
+  <li class="education-item">
     2016–2020: <strong>Bauman Moscow State Technical University</strong>
   </li>
 </ul>
 
 <h2>Additional courses</h2>
 <ul>
-  <li>
+  <li class="education-item">
     <p><strong>Introduction to machine learning</strong> from the University Higher School of Economics on Coursera</p>
     <p><a href="https://www.coursera.org/account/accomplishments/verify/NANEYSFHTVTZ" target="_blank">Coursera course certificate</a></p>
   </li>
