Harder text shadow

--- a/app/partials/_education.html
+++ b/app/partials/_education.html
@@ -2,14 +2,14 @@
 
 <ul>
   <li class="education-item">
-    2016–2020: <strong>Bauman Moscow State Technical University</strong>
+    <p class="education-item__text">2016–2020: <strong>Bauman Moscow State Technical University</strong></p>
   </li>
 </ul>
 
 <h2>Additional courses</h2>
 <ul>
   <li class="education-item">
-    <p><strong>Introduction to machine learning</strong> from the University Higher School of Economics on Coursera</p>
+    <p class="education-item__text"><strong>Introduction to machine learning</strong> from the University Higher School of Economics on Coursera</p>
     <p><a href="https://www.coursera.org/account/accomplishments/verify/NANEYSFHTVTZ" target="_blank">Coursera course certificate</a></p>
   </li>
 </ul>
