Don't draw text shadows on mobiles

--- a/app/styles/education.sass
+++ b/app/styles/education.sass
@@ -1,3 +1,4 @@
 .education-item
   &__text
-    text-shadow: 0 0 6px white, 0 0 6px white
+    @media (min-width: 992px)
+      text-shadow: 0 0 6px white, 0 0 6px white, 0 0 6px white
