--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -7,7 +7,9 @@
 
   &__description
     margin-left: 24px
-    text-shadow: 0 0 6px white, 0 0 6px white
+
+    @media (min-width: 992px)
+      text-shadow: 0 0 6px white, 0 0 6px white, 0 0 6px white
 
   &__links
     margin-left: 12px
