--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -131,8 +131,8 @@
 
   {{ item(
       'Cocos starter kit',
-      ['open source', 'yeoman', 'cocos2d-x', 'coffeescript'],
-      ['oss', 'yeoman', 'cocos', 'coffee'],
+      ['open source', 'yeoman', 'cocos2d-x', 'coffeescript', 'gulp'],
+      ['oss', 'yeoman', 'cocos', 'coffee', 'gulp'],
       'Boilerplate for cocos2d-x javascript games',
       'https://github.com/reo7sp/cocos-starter-kit',
       'GitHub'
@@ -238,8 +238,8 @@
 
   {{ item(
       'SBF Bukkit Plugin',
-      ['open source', 'java', 'minecraft'],
-      ['oss', 'java', 'minecraft'],
+      ['open source', 'java'],
+      ['oss', 'java'],
       'SBF Minecraft server\'s plugin',
       'https://github.com/reo7sp/SBF-Bukkit-Plugin',
       'GitHub'
