--- a/app/partials/_contacts.html
+++ b/app/partials/_contacts.html
@@ -1,7 +1,7 @@
 <ul class="contacts-links">
-  <li class="contacts-links__item">
+  <li class="contacts-links__item contacts-links__item--github">
     <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
-    <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp">GitHub</a>
+    <a class="contacts-links__link contacts-links__link--github" target="_blank" href="https://github.com/reo7sp">GitHub</a>
   </li>
   <li class="contacts-links__item">
     <img class="contacts-links__icon" src="images/icons/linkedin.png" alt="LinkedIn">
