--- a/app/styles/contacts-links.sass
+++ b/app/styles/contacts-links.sass
@@ -5,6 +5,11 @@
   &__item
     margin: 8px 0
 
+    &--github
+      margin-bottom: 14px
+      font-size: 19px
+      font-weight: 700
+
   &__icon
     width: 24px
     height: auto
@@ -12,3 +17,7 @@
 
   &__link
     vertical-align: super
+
+    &--github
+      vertical-align: text-top
+      line-height: 14px
