--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -19,6 +19,9 @@
     margin-left: 12px
     cursor: pointer
 
+  &__stat
+    margin-left: 12px
+
   &__info-labels
     display: inline-block
     margin-left: 6px
