--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -54,33 +54,6 @@
   ) }}
 
   {{ item(
-      'WaveTest',
-      ['open source', 'scala'],
-      ['oss', 'scala'],
-      'Researching a bunch of monochromatic waves moving in time',
-      'https://github.com/reo7sp/WaveTest',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'FourierTransformTest',
-      ['open source', 'scala'],
-      ['oss', 'scala'],
-      'Researching fourier transform of a wave moving in time',
-      'https://github.com/reo7sp/FourierTransformTest',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'MagneticTest',
-      ['open source', 'c', 'opengl'],
-      ['oss', 'cpp', 'opengl'],
-      'Researching magnetic field',
-      'https://github.com/reo7sp/MagneticTest',
-      'GitHub'
-  ) }}
-
-  {{ item(
       'GoToHack2\'s project',
       ['hackathon', 'natural text processing', 'open source', 'python', 'lda'],
       ['employment', 'nlp', 'oss', 'python', 'lda'],
@@ -91,6 +64,33 @@
       'GitHub',
       'images/certificates/gotohack2.jpg',
       'Winner certificate'
+  ) }}
+
+  {{ item(
+      'WaveFourierTransformTest',
+      ['open source', 'scala'],
+      ['oss', 'scala'],
+      'Researching fourier transform of a wave moving in time',
+      'https://github.com/reo7sp/FourierTransformTest',
+      'GitHub'
+  ) }}
+
+  {{ item(
+      'WaveTest',
+      ['open source', 'scala'],
+      ['oss', 'scala'],
+      'Researching a bunch of monochromatic waves moving in time',
+      'https://github.com/reo7sp/WaveTest',
+      'GitHub'
+  ) }}
+
+  {{ item(
+      'MagneticTest',
+      ['open source', 'c', 'opengl'],
+      ['oss', 'cpp', 'opengl'],
+      'Researching magnetic field',
+      'https://github.com/reo7sp/MagneticTest',
+      'GitHub'
   ) }}
 </ul>
 
@@ -147,7 +147,7 @@
 <h3>Web development</h3>
 <ul class="work">
   {{ item(
-      'gloria-nnov.ru',
+      'ATK Gloria',
       ['working since 2013', 'website', 'ruby'],
       ['employment', 'site', 'ruby'],
       'Website of travel company in Nizhny Novgorod',
@@ -214,17 +214,8 @@
       'GoToHackTestTask',
       ['open source', 'scala'],
       ['oss', 'scala'],
-      'Test task for GoToHack hackathon',
+      'Test task for GoToHack BigData hackathon',
       'https://github.com/reo7sp/GoToHackTestTask',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'dokku-mariadb-sc',
-      ['open source', 'bash', 'dokku', 'docker'],
-      ['oss', 'bash', 'dokku', 'docker'],
-      'MariaDB in single container Dokku plugin',
-      'https://github.com/reo7sp/dokku-mariadb-sc',
       'GitHub'
   ) }}
 
@@ -234,6 +225,15 @@
       ['oss', 'java'],
       'VK and Twitter desktop notifications',
       'https://github.com/reo7sp/Socn',
+      'GitHub'
+  ) }}
+
+  {{ item(
+      'dokku-mariadb-sc',
+      ['open source', 'bash', 'dokku', 'docker'],
+      ['oss', 'bash', 'dokku', 'docker'],
+      'MariaDB in single container Dokku plugin',
+      'https://github.com/reo7sp/dokku-mariadb-sc',
       'GitHub'
   ) }}
 
