Some work section changes

--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -178,8 +178,8 @@
 <ul class="work">
   {{ item(
       'tgbot-cpp',
-      ['open source', 'c++', 'boost', 'telegram'],
-      ['oss', 'cpp', 'cpp', 'telegram'],
+      ['open source', 'c++', 'boost', 'boost asio'],
+      ['oss', 'cpp', 'cpp', 'cpp'],
       'C++ library for Telegram bot API',
       'https://github.com/reo7sp/tgbot-cpp',
       'GitHub',
@@ -239,8 +239,8 @@
 
   {{ item(
       'phabricator-docker',
-      ['open source', 'docker', 'bash'],
-      ['oss', 'docker', 'bash'],
+      ['open source', 'bash', 'docker'],
+      ['oss', 'bash', 'docker'],
       'Docker image for Phabricator',
       'https://github.com/reo7sp/phabricator-docker',
       'GitHub'
