--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -211,15 +211,6 @@
   ) }}
 
   {{ item(
-      'GoToHackTestTask',
-      ['open source', 'scala'],
-      ['oss', 'scala'],
-      'Test task for GoToHack BigData hackathon',
-      'https://github.com/reo7sp/GoToHackTestTask',
-      'GitHub'
-  ) }}
-
-  {{ item(
       'Socn',
       ['open source', 'java'],
       ['oss', 'java'],
@@ -261,6 +252,33 @@
       ['oss', 'vim'],
       'Vim config',
       'https://github.com/reo7sp/ReoVimRC',
+      'GitHub'
+  ) }}
+
+  {{ item(
+      'GoTo ML summer 2016 test task',
+      ['open source', 'recommendation systems', 'python', 'svd'],
+      ['oss', 'science', 'python', 'science'],
+      'Test task for GoTo Machine Learning school in summer 2016',
+      'https://github.com/reo7sp/GoToS2016-TestTask',
+      'GitHub'
+  ) }}
+
+  {{ item(
+      'GoToHack test task',
+      ['open source', 'scala'],
+      ['oss', 'scala'],
+      'Test task for GoToHack BigData hackathon',
+      'https://github.com/reo7sp/GoToHack-TestTask',
+      'GitHub'
+  ) }}
+
+  {{ item(
+      'GoToHack2 test task',
+      ['open source', 'python'],
+      ['oss', 'python'],
+      'Test task for GoToHack2 Data Science hackathon',
+      'https://github.com/reo7sp/GoToHack2-TestTask',
       'GitHub'
   ) }}
 </ul>
