--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -36,7 +36,7 @@
   {{ item(
       'Voice to vector',
       ['neural networks', 'open source', 'python', 'theano', 'lasagne'],
-      ['neuro', 'oss', 'python', 'python', 'python'],
+      ['science', 'oss', 'python', 'python', 'python'],
       'Transforms voices to vectors so you can compare them',
       'https://github.com/xenx/speech',
       'GitHub',
@@ -47,7 +47,7 @@
   {{ item(
       'Face3dMatch',
       ['computer vision', 'open source', 'android', 'scala'],
-      ['compvis', 'oss', 'android', 'scala'],
+      ['science', 'oss', 'android', 'scala'],
       'Android app which authorizes user using 3d model of the face',
       'https://github.com/reo7sp/Face3dMatch',
       'GitHub'
@@ -56,7 +56,7 @@
   {{ item(
       'GoToHack2\'s project',
       ['hackathon', 'natural text processing', 'open source', 'python', 'lda'],
-      ['employment', 'nlp', 'oss', 'python', 'lda'],
+      ['employment', 'science', 'oss', 'python', 'science'],
       'We worked on case by MTS company: prediction of post popularity in VK group of TalentEdme project',
       'http://www.slideshare.net/OlegMorozenkov/gotohack2-data-science-hackathon',
       'SlideShare',
@@ -68,8 +68,8 @@
 
   {{ item(
       'WaveFourierTransformTest',
-      ['open source', 'scala'],
-      ['oss', 'scala'],
+      ['physics', 'open source', 'scala'],
+      ['science', 'oss', 'scala'],
       'Researching fourier transform of a wave moving in time',
       'https://github.com/reo7sp/FourierTransformTest',
       'GitHub'
@@ -77,8 +77,8 @@
 
   {{ item(
       'WaveTest',
-      ['open source', 'scala'],
-      ['oss', 'scala'],
+      ['physics', 'open source', 'scala'],
+      ['science', 'oss', 'scala'],
       'Researching a bunch of monochromatic waves moving in time',
       'https://github.com/reo7sp/WaveTest',
       'GitHub'
@@ -86,10 +86,37 @@
 
   {{ item(
       'MagneticTest',
-      ['open source', 'c', 'opengl'],
-      ['oss', 'cpp', 'opengl'],
+      ['physics', 'open source', 'c', 'opengl'],
+      ['science', 'oss', 'cpp', 'opengl'],
       'Researching magnetic field',
       'https://github.com/reo7sp/MagneticTest',
+      'GitHub'
+  ) }}
+
+  {{ item(
+      'GoTo ML summer 2016 test task',
+      ['open source', 'recommendation system', 'python', 'svd'],
+      ['oss', 'science', 'python', 'science'],
+      'Test task for GoTo Machine Learning school in summer 2016',
+      'https://github.com/reo7sp/GoToS2016-TestTask',
+      'GitHub'
+  ) }}
+
+  {{ item(
+      'GoToHack test task',
+      ['open source', 'scala'],
+      ['oss', 'scala'],
+      'Test task for GoToHack BigData hackathon',
+      'https://github.com/reo7sp/GoToHack-TestTask',
+      'GitHub'
+  ) }}
+
+  {{ item(
+      'GoToHack2 test task',
+      ['open source', 'python', 'kaggle'],
+      ['oss', 'python', 'employment'],
+      'Test task for GoToHack2 Data Science hackathon',
+      'https://github.com/reo7sp/GoToHack2-TestTask',
       'GitHub'
   ) }}
 </ul>
@@ -252,33 +279,6 @@
       ['oss', 'vim'],
       'Vim config',
       'https://github.com/reo7sp/ReoVimRC',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'GoTo ML summer 2016 test task',
-      ['open source', 'recommendation systems', 'python', 'svd'],
-      ['oss', 'science', 'python', 'science'],
-      'Test task for GoTo Machine Learning school in summer 2016',
-      'https://github.com/reo7sp/GoToS2016-TestTask',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'GoToHack test task',
-      ['open source', 'scala'],
-      ['oss', 'scala'],
-      'Test task for GoToHack BigData hackathon',
-      'https://github.com/reo7sp/GoToHack-TestTask',
-      'GitHub'
-  ) }}
-
-  {{ item(
-      'GoToHack2 test task',
-      ['open source', 'python'],
-      ['oss', 'python'],
-      'Test task for GoToHack2 Data Science hackathon',
-      'https://github.com/reo7sp/GoToHack2-TestTask',
       'GitHub'
   ) }}
 </ul>
