--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -39,7 +39,7 @@
     &_employment
       color: #bf4040
     &_science
-      color: #673ab7
+      color: #9d65ff
     &_oss
       color: #ff9632
     &_unity
@@ -56,20 +56,10 @@
       color: #222
     &_python
       color: #3374a5
-    &_neuro
-      color: #673ab7
-    &_compvis
-      color: #673ab7
-    &_datasci
-      color: #673ab7
-    &_nlp
-      color: #673ab7
-    &_lda
-      color: #673ab7
     &_site
-      color: #673ab7
+      color: #9d65ff
     &_webapp
-      color: #673ab7
+      color: #9d65ff
     &_android
       color: #59cc55
     &_scala
