--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -41,9 +41,9 @@
     &_science
       color: #9d65ff
     &_oss
-      color: #ff9632
+      color: #ffbb79
     &_unity
-      color: #00996b
+      color: #00b37d
     &_cocos
       color: #0062b3
     &_steam
@@ -53,27 +53,25 @@
     &_yeoman
       color: #ae6832
     &_gulp
-      color: #222
+      color: #c81e32
     &_python
-      color: #3374a5
+      color: #3c89c3
     &_site
       color: #9d65ff
     &_webapp
       color: #9d65ff
     &_android
-      color: #59cc55
+      color: #39b135
     &_scala
       color: #dd0000
     &_java
       color: #f55e00
     &_ruby
-      color: #b90000
+      color: #ff1a1a
     &_rails
       color: #dd0000
     &_cpp
       color: #0054a0
-    &_gulp
-      color: #de2239
     &_telegram
       color: #0093d6
     &_bash
