--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -17,7 +17,7 @@
         <a class="work-item__link" target="_blank" href="{{ secondLink }}">{{ secondLinkTitle }}</a>
       {% endif %}
       {% if thirdLink %}
-        <a class="work-item__link" target="_blank" href="{{ thirdLink }}"><i>{{ thirdLinkTitle }}</i></a>
+        <a class="work-item__link" target="_blank" href="{{ thirdLink }}">{{ thirdLinkTitle }}</a>
       {% endif %}
       {% if githubStarCount %}
       <span class="work-item__stat">
@@ -53,6 +53,8 @@
       'GitHub'
   ) }}
 
+  <br>
+
   {{ item(
       'GoToHack2\'s project',
       ['hackathon', 'natural text processing', 'open source', 'python', 'lda'],
@@ -65,6 +67,8 @@
       'images/certificates/gotohack2.jpg',
       'Winner certificate'
   ) }}
+
+  <br>
 
   {{ item(
       'WaveFourierTransformTest',
@@ -92,6 +96,8 @@
       'https://github.com/reo7sp/MagneticTest',
       'GitHub'
   ) }}
+
+  <br>
 
   {{ item(
       'GoToHack test task',
@@ -125,8 +131,8 @@
 <ul class="work">
   {{ item(
       'Raycord Legends',
-      ['worked 2014–2015', 'unity3d', 'uframe', 'spine'],
-      ['employment', 'unity', 'unity', 'unity'],
+      ['worked 2014–2015', 'game', 'unity3d', 'uframe', 'spine'],
+      ['employment', 'game', 'unity', 'unity', 'unity'],
       'My Little Pony and Rayman Legends crossover game. Features cool graphics',
       'http://raycordlegends.com',
       'raycordlegends.com',
@@ -136,8 +142,8 @@
 
   {{ item(
       'MARS 2000',
-      ['freelance', 'unity3d', 'steam greenlight'],
-      ['employment', 'unity', 'steam'],
+      ['freelance', 'game', 'unity3d', 'steam greenlight'],
+      ['employment', 'game', 'unity', 'steam'],
       'Top-down oldschool shooter',
       'https://vk.com/mars_2k',
       'VK'
@@ -145,10 +151,12 @@
 
   {{ item(
       'Let\'s nuke them',
-      ['in development', 'cocos2d-x', 'coffeescript'],
-      ['employment', 'cocos', 'coffee'],
+      ['in development', 'game', 'cocos2d-x', 'coffeescript'],
+      ['employment', 'game', 'cocos', 'coffee'],
       'Strategy game'
   ) }}
+
+  <br>
 
   {{ item(
       'Kaniku',
@@ -181,6 +189,8 @@
       'http://gloria-nnov.ru',
       'gloria-nnov.ru'
   ) }}
+
+  <br>
 
   {{ item(
       'Thylogale',
