--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -42,6 +42,8 @@
       color: #9d65ff
     &_oss
       color: #ffbb79
+    &_game
+      color: #9d65ff
     &_unity
       color: #00b37d
     &_cocos
