--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -118,7 +118,7 @@
   ) }}
 
   {{ item(
-      'GoTo ML summer 2016 test task',
+      'GoTo ML 2016 test task',
       ['open source', 'recommendation system', 'python', 'svd'],
       ['oss', 'science', 'python', 'science'],
       'Test task for GoTo Machine Learning school in summer 2016',
