Mobile version padding fix

--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -6,14 +6,17 @@
     font-weight: bold
 
   &__description
-    margin-left: 24px
+    margin-left: 12px
 
     @media (min-width: 992px)
+      margin-left: 24px
       text-shadow: 0 0 6px white, 0 0 6px white, 0 0 6px white
 
   &__links
-    margin-left: 12px
     display: table
+
+    @media (min-width: 992px)
+      margin-left: 12px
 
   &__link
     margin-left: 12px
@@ -23,8 +26,12 @@
     margin-left: 12px
 
   &__info-labels
-    display: inline-block
-    margin-left: 6px
+    display: block
+    margin-left: 8px
+
+    @media (min-width: 992px)
+      display: inline-block
+      margin-left: 6px
 
   &__info-label
     display: inline-block
