Mobile version padding fix

--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -17,7 +17,7 @@
         <a class="work-item__link" target="_blank" href="{{ secondLink }}">{{ secondLinkTitle }}</a>
       {% endif %}
       {% if thirdLink %}
-        <a class="work-item__link" target="_blank" href="{{ thirdLink }}">{{ thirdLinkTitle }}</a>
+        <a class="work-item__link work-item__link--third" target="_blank" href="{{ thirdLink }}">{{ thirdLinkTitle }}</a>
       {% endif %}
       {% if githubStarCount %}
       <span class="work-item__stat">
