--- a/app/styles/work.sass
+++ b/app/styles/work.sass
@@ -103,3 +103,32 @@
       color: #873f12
     &_vim
       color: #00a94c
+
+.work-nav
+  &__gotos
+    display: table
+    width: 100%
+
+    @media (min-width: 992px)
+      display: none
+
+  &__goto
+    display: table-cell
+    width: 50%
+    text-align: center
+
+    @media (min-width: 992px)
+      display: none
+
+  &__up
+    float: right
+
+    @media (min-width: 992px)
+      display: none
+
+  &__up-from-bottom
+    display: inline-block
+    margin-top: 32px
+
+    @media (min-width: 992px)
+      display: none
