--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -9,7 +9,7 @@
     <script src="scripts/app.js" defer></script>
 
     <title>{% block title %}{% endblock %}</title>
-    <meta name="description" content="23 projects are featured on this portfolio site. See GitHub for more."> 
+    <meta name="description" content="25 projects in Data Science, Gamedev and Web are featured on this portfolio site"> 
 
     {% block head %}{% endblock %}
   </head>
