--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -308,10 +308,17 @@
   ) }}
 </ul>
 
-<div class="work-github">
+<p>
   <img class="contacts-links__icon" src="images/icons/github.png" alt="GitHub">
-  <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp">See full list of my open source projects on GitHub</a>
-</div>
-
+  <a class="contacts-links__link" target="_blank" href="https://github.com/reo7sp?tab=repositories">See full list of my open source projects on GitHub</a>
+</p>
+<p style="margin-left: 36px">
+  By language: 
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&type=public&language=java">Java</a>,
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&type=public&language=c%2B%2B">C++</a>,
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&type=public&language=scala">Scala</a>,
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&type=public&language=shell">Bash</a>,
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&type=public&language=coffeescript">CoffeeScript</a>
+</p>
 
 <a class="work-nav__up-from-bottom" href="#work">↑ up</a>
