--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -314,11 +314,11 @@
 </p>
 <p style="margin-left: 36px">
   By language: 
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&type=public&language=java">Java</a>,
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&type=public&language=c%2B%2B">C++</a>,
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&type=public&language=scala">Scala</a>,
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&type=public&language=shell">Bash</a>,
-  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&type=public&language=coffeescript">CoffeeScript</a>
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=java">Java</a>,
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=c%2B%2B">C++</a>,
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=scala">Scala</a>,
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=shell">Bash</a>,
+  <a target="_blank" href="https://github.com/reo7sp?utf8=✓&tab=repositories&q=&language=coffeescript">CoffeeScript</a>
 </p>
 
 <a class="work-nav__up-from-bottom" href="#work">↑ up</a>
