Rename work section

--- a/app/partials/_work.html
+++ b/app/partials/_work.html
@@ -30,7 +30,7 @@
 
 
 <a name="work"></a>
-<h2>My work</h2>
+<h2>My portfolio</h2>
 
 <div class="work-nav__gotos">
   <a class="work-nav__goto" href="#work-gamedev">↓ go to gamedev</a>
